src/main/java/com/example/credit_service_project/service/errors/ErrorsMessage.java
package com.example.credit_service_project.service.errors;

public class ErrorsMessage {

    public static final String NOT_FOUND_ACCOUNTSlIST_MESSAGE = "NO SUCH ACCOUNTS WAS FOUND!";
    public static final String NOT_FOUND_ACCOUNT_MESSAGE = "NO SUCH ACCOUNT WAS FOUND!";
    public static final String UNABLE_TO_ADD_CARD_MESSAGE = "THIS ACCOUNT WAS NOT CREATED, ADDING A CARD IS IMPOSSIBLE!";
    public static final String NOT_FOUND_CARD_MESSAGE = "NO SUCH CARD WAS FOUND!";
    public static final String EMPTY_CARD_LIST_MESSAGE = "LIST OF CARDS IS EMPTY, NO SUCH CARDS WAS FOUND!";
    public static final String NEGATIVE_BALANCE_EXCEPTION = "OPERATION SUM IS GREATER THAN BALANCE, PLEASE TOP UP YOUR ACCOUNT!";
    public static final String NOT_FOUND_OPERATION_MESSAGE = "NO SUCH OPERATION WAS FOUND!";
    public static final String OPERATION_TYPE_CHANGE_MESSAGE = "CHANGE OPERATION CREDIT TO DEBIT IS IMPOSSIBLE!";

}
